[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/ui/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/path_manager/Connection.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/tools/grid_based_ui/Start.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/tools/graph_based_ui/Graph.gd" type="Script" id=4]
[ext_resource path="res://src/tools/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/tools/graph_based_ui/GraphBasedUI.gd" type="Script" id=6]
[ext_resource path="res://addons/path_manager/ConnectablePath.gd" type="Script" id=7]
[ext_resource path="res://src/tools/grid_based_ui/Goal.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/tools/agents/AgentGraph.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/path_manager/Connection.gd" type="Script" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 149.698, 217.673, -0.471405, 0.471405, 0.471405, -0.471405, 335.903, 223.33, 0, 0, 0, 0, 426.884, 224.273 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( -105.675, 13.3484, 105.675, -13.3484, 426.884, 224.273, -114.957, -3.17122, 114.957, 3.17122, 622.517, 109.722, -81.4749, -0.629961, 81.4749, 0.629961, 797.408, 227.101 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 426.884, 224.273, 0, 0, 0, 0, 797.408, 227.101 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 797.408, 227.101, -183.959, -91.418, 183.959, 91.418, 1127.25, 227.631 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( -160.325, -4.864, 160.325, 4.864, 149.698, 217.673, -19.8425, -85.4551, 19.8425, 85.4551, 438.574, 363.428 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( -9.88832, -146.559, 9.88832, 146.559, 438.574, 363.428, -200.239, -13.4199, 200.239, 13.4199, 490.484, 646.911 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0.943874, 141.109, -0.943874, -141.109, 438.574, 363.428, 0, 0, 0, 0, 797.408, 227.101 )
}

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( -210.48, -9.53517, 210.48, 9.53517, 490.484, 646.911, -176.577, -2.47208, 176.577, 2.47208, 797.408, 227.101 )
}

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( -255.399, 14.6832, 255.399, -14.6832, 490.484, 646.911, 0, 0, 0, 0, 1045.2, 540.439, 204.675, 258.069, -204.675, -258.069, 1127.25, 227.631 )
}

[node name="GraphBasedUI" type="Node2D"]
script = ExtResource( 6 )

[node name="UserInterface" parent="." instance=ExtResource( 1 )]

[node name="Graph" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Paths" type="Node2D" parent="Graph"]

[node name="ConnectablePath" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 1 )
script = ExtResource( 7 )

[node name="ConnectablePath2" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 2 )
script = ExtResource( 7 )

[node name="ConnectablePath3" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 3 )
script = ExtResource( 7 )

[node name="ConnectablePath4" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 4 )
script = ExtResource( 7 )

[node name="ConnectablePath5" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 5 )
script = ExtResource( 7 )

[node name="ConnectablePath6" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 6 )
script = ExtResource( 7 )

[node name="ConnectablePath7" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 7 )
script = ExtResource( 7 )

[node name="ConnectablePath8" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 8 )
script = ExtResource( 7 )

[node name="ConnectablePath9" type="Path2D" parent="Graph/Paths"]
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
curve = SubResource( 9 )
script = ExtResource( 7 )

[node name="Connections" type="Node2D" parent="Graph"]

[node name="Connection" parent="Graph/Connections" instance=ExtResource( 2 )]
position = Vector2( 426.884, 224.273 )
passable_connections = {
"ConnectablePath": [ "ConnectablePath3", "ConnectablePath2" ],
"ConnectablePath2": [ "ConnectablePath" ],
"ConnectablePath3": [ "ConnectablePath" ]
}
connected_area_paths = [ "../../Paths/ConnectablePath3/Start", "../../Paths/ConnectablePath/End", "../../Paths/ConnectablePath2/Start" ]

[node name="Connection2" parent="Graph/Connections" instance=ExtResource( 2 )]
position = Vector2( 797.408, 227.101 )
passable_connections = {
"ConnectablePath2": [ "ConnectablePath4" ],
"ConnectablePath3": [ "ConnectablePath4" ],
"ConnectablePath4": [ "ConnectablePath2", "ConnectablePath7", "ConnectablePath3", "ConnectablePath8" ],
"ConnectablePath7": [ "ConnectablePath4" ],
"ConnectablePath8": [ "ConnectablePath4" ]
}
connected_area_paths = [ "../../Paths/ConnectablePath2/End", "../../Paths/ConnectablePath4/Start", "../../Paths/ConnectablePath7/End", "../../Paths/ConnectablePath3/End", "../../Paths/ConnectablePath8/End" ]

[node name="Connection3" parent="Graph/Connections" instance=ExtResource( 2 )]
position = Vector2( 149.698, 217.673 )
passable_connections = {
"ConnectablePath": [  ],
"ConnectablePath5": [  ]
}
connected_area_paths = [ "../../Paths/ConnectablePath5/Start", "../../Paths/ConnectablePath/Start" ]

[node name="Connection4" parent="Graph/Connections" instance=ExtResource( 2 )]
position = Vector2( 438.574, 363.428 )
passable_connections = {
"ConnectablePath5": [ "ConnectablePath6" ],
"ConnectablePath6": [ "ConnectablePath5", "ConnectablePath7" ],
"ConnectablePath7": [ "ConnectablePath6" ]
}
connected_area_paths = [ "../../Paths/ConnectablePath6/Start", "../../Paths/ConnectablePath5/End", "../../Paths/ConnectablePath7/Start" ]

[node name="Connection5" parent="Graph/Connections" instance=ExtResource( 2 )]
position = Vector2( 490.484, 646.911 )
passable_connections = {
"ConnectablePath6": [ "ConnectablePath8", "ConnectablePath9" ],
"ConnectablePath8": [ "ConnectablePath6" ],
"ConnectablePath9": [ "ConnectablePath6" ]
}
connected_area_paths = [ "../../Paths/ConnectablePath8/Start", "../../Paths/ConnectablePath6/End", "../../Paths/ConnectablePath9/Start" ]

[node name="Connection6" type="Node2D" parent="Graph/Connections" instance=ExtResource( 2 )]
position = Vector2( 1127.25, 227.631 )
script = ExtResource( 10 )
passable_connections = {
"ConnectablePath4": [ "ConnectablePath9" ],
"ConnectablePath9": [ "ConnectablePath4" ]
}
connected_area_paths = [ "../../Paths/ConnectablePath9/End", "../../Paths/ConnectablePath4/End" ]

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="Start" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Goal" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Agents" type="Node2D" parent="."]

[node name="AgentGraph" parent="Agents" instance=ExtResource( 9 )]
position = Vector2( 329.495, 223.262 )
node_path_to_path = NodePath("../../Graph/Paths/ConnectablePath")

[connection signal="algorithms_id_pressed" from="UserInterface" to="." method="_on_UserInterface_algorithms_id_pressed"]
[connection signal="button_pressed" from="UserInterface" to="." method="_on_UserInterface_button_pressed"]
[connection signal="options_id_pressed" from="UserInterface" to="." method="_on_UserInterface_options_id_pressed"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath/Start" to="Graph/Paths/ConnectablePath/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath/Start" to="Graph/Paths/ConnectablePath/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath/Start" to="Graph/Paths/ConnectablePath/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath/End" to="Graph/Paths/ConnectablePath/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath/End" to="Graph/Paths/ConnectablePath/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath/End" to="Graph/Paths/ConnectablePath/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath2/Start" to="Graph/Paths/ConnectablePath2/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath2/Start" to="Graph/Paths/ConnectablePath2/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath2/Start" to="Graph/Paths/ConnectablePath2/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath2/End" to="Graph/Paths/ConnectablePath2/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath2/End" to="Graph/Paths/ConnectablePath2/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath2/End" to="Graph/Paths/ConnectablePath2/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath3/Start" to="Graph/Paths/ConnectablePath3/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath3/Start" to="Graph/Paths/ConnectablePath3/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath3/Start" to="Graph/Paths/ConnectablePath3/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath3/End" to="Graph/Paths/ConnectablePath3/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath3/End" to="Graph/Paths/ConnectablePath3/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath3/End" to="Graph/Paths/ConnectablePath3/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath4/Start" to="Graph/Paths/ConnectablePath4/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath4/Start" to="Graph/Paths/ConnectablePath4/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath4/Start" to="Graph/Paths/ConnectablePath4/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath4/End" to="Graph/Paths/ConnectablePath4/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath4/End" to="Graph/Paths/ConnectablePath4/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath4/End" to="Graph/Paths/ConnectablePath4/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath5/Start" to="Graph/Paths/ConnectablePath5/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath5/Start" to="Graph/Paths/ConnectablePath5/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath5/Start" to="Graph/Paths/ConnectablePath5/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath5/End" to="Graph/Paths/ConnectablePath5/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath5/End" to="Graph/Paths/ConnectablePath5/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath5/End" to="Graph/Paths/ConnectablePath5/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath6/Start" to="Graph/Paths/ConnectablePath6/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath6/Start" to="Graph/Paths/ConnectablePath6/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath6/Start" to="Graph/Paths/ConnectablePath6/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath6/End" to="Graph/Paths/ConnectablePath6/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath6/End" to="Graph/Paths/ConnectablePath6/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath6/End" to="Graph/Paths/ConnectablePath6/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath7/Start" to="Graph/Paths/ConnectablePath7/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath7/Start" to="Graph/Paths/ConnectablePath7/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath7/Start" to="Graph/Paths/ConnectablePath7/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath7/End" to="Graph/Paths/ConnectablePath7/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath7/End" to="Graph/Paths/ConnectablePath7/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath7/End" to="Graph/Paths/ConnectablePath7/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath8/Start" to="Graph/Paths/ConnectablePath8/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath8/Start" to="Graph/Paths/ConnectablePath8/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath8/Start" to="Graph/Paths/ConnectablePath8/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath8/End" to="Graph/Paths/ConnectablePath8/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath8/End" to="Graph/Paths/ConnectablePath8/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath8/End" to="Graph/Paths/ConnectablePath8/End" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath9/Start" to="Graph/Paths/ConnectablePath9/Start" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath9/Start" to="Graph/Paths/ConnectablePath9/Start" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath9/Start" to="Graph/Paths/ConnectablePath9/Start" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Graph/Paths/ConnectablePath9/End" to="Graph/Paths/ConnectablePath9/End" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Graph/Paths/ConnectablePath9/End" to="Graph/Paths/ConnectablePath9/End" method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Graph/Paths/ConnectablePath9/End" to="Graph/Paths/ConnectablePath9/End" method="_on_Area2D_input_event"]
